content-driven constraint types

--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -843,9 +843,9 @@ Start dates (\emph{disco:startDate}), e.g., must be before (\emph{\textless}) en
 SPARQL is generally seen as the method of choice to validate RDF data according to certain constraints.
 We use \emph{SPIN}, 
 a SPARQL-based way to formulate and check constraints, as basis to develop a
-validation environment (available at \url{http://purl.org/net/rdfval-demo})\footnote{Source code downloadable at: \textcolor{red}{\url{https://github.com/boschthomas/rdf-validator}}} to validate RDF data according to constraints expressed my arbitrary constraint languages like Shape Expressions,
+validation environment (available at \url{http://purl.org/net/rdfval-demo})\footnote{Source code downloadable at: \url{https://github.com/boschthomas/rdf-validator}} to validate RDF data according to constraints expressed my arbitrary constraint languages like Shape Expressions,
 %\footnote{\url{http://www.w3.org/Submission/shex-primer/}}
-Resource Shapes, and the Web Ontology Language\footnote{\textcolor{red}{SPIN mappings available at: \url{https://github.com/boschthomas/rdf-validation/SPIN}}} \cite{BoschEckert2014-2}.
+Resource Shapes, and the Web Ontology Language\footnote{SPIN mappings available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/SPIN}} \cite{BoschEckert2014-2}.
 The \emph{RDF Validator} also validates RDF data to ensure correct syntax, semantics, and integrity of diverse vocabularies such as \emph{Disco, QB, PHDD, SKOS, and XKOS}.
 Although accessible within our validation tool, we provide all implemented constraints\footnote{\url{https://github.com/boschthomas/rdf-validation/tree/master/constraints}} in form of SPARQL CONSTRUCT queries.
 For the subsequent evaluation, we implemented 212 constraints on \emph{Disco}, \emph{QB}, \emph{SKOS}, \emph{XKOS}, and \emph{PHDD} data sets.
