arxiv articles cited

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -299,7 +299,7 @@
 }
 
 @Article{BoschZapilkoWackerowEckert2015,
-  Title                    = {RDF Constraints to Validate Metadata on Person-Level, Aggregated, Thesauri, and Statistical Classifications Data Sets and Rectangular Data},
+  Title                    = {RDF Constraints to Validate Rectangular Data and Metadata on Person-Level Data, Aggregated Data, Thesauri, and Statistical Classifications},
   Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Eckert, Kai},
   Year                     = {2015},
 
